--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  firebase_core: any
+  firebase_auth: any
+  cloud_firestore: any
+  http: ^1.1.0 
+  geolocator: ^9.0.1
+  shared_preferences: ^2.0.8
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
