--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^1.8.1",
+    "body-parser": "^1.20.3",
     "cookie-parser": "~1.4.4",
+    "cor": "^0.0.0",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nodemailer": "^6.10.0",
+    "twilio": "^5.4.5"
   }
 }
